<resources>
    <string name="app_name">LMS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="grf">GRF</string>
    <string name="receiver">Receiver</string>
    <string name="login_note">NOTE: The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a typE.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_entry"><u>New Entry</u></string>
    <string name="sampling_point">Sampling Point</string>
    <string name="sample_collected_by">Sample Collected By</string>
    <string name="date_of_sample_collection">Date of Sample Collection</string>
    <string name="sample_deposited_by_amp_phone_no"><![CDATA[Sample Deposited By & Phone No]]></string>
    <string name="quantity_and_packing">Quantity and packing</string>
    <string name="date_of_sample_received_in_laboratory">Date of Sample Received in laboratory</string>
    <string name="color_odour">Color/Odour</string>
    <string name="submit">Submit</string>
    <string name="sample_received">Sample Received</string>
    <string name="scan_to_entry">Scan to Entry</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="simple_received_number">122</string>
    <string name="simple_tested_number">16</string>
    <string name="simple_tested">Simple Tested</string>
    <string name="new_simple">New Simple</string>
    <string name="assigned_Simple">Assigned Simple</string>
    <string name="test_completed">Test Completed</string>
    <string name="name_and_address">Name and Address</string>
    <string name="enter_in_details">Enter In Details</string>
    <string name="new_sample">New Sample</string>
    <string name="save">Save</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="user_number">User Number</string>
    <string name="login_as">Login as</string>
    <string name="analyst_dashboard">Analyst Dashboard</string>
    <string name="u_p_pollution_control_boards">U.P. Pollution control boards</string>
    <string name="lab_management_system_l_m_s">Lab Management System (L.M.S)</string>
</resources>